2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/debug/efence.c: (gst_fenced_buffer_finalize),
	(gst_fenced_buffer_class_init):
	Properly chain up finalize method. Fixes bug #515979.

2008-02-12  Jan Schmidt  <jan.schmidt@sun.com>

	* sys/ximage/gstximagesrc.c:
	Free allocated Damage memory before closing our connection to the
	X server. Fixes: #515706

2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/jpeg/gstsmokeenc.c: (gst_smokeenc_chain):
	* tests/check/Makefile.am:
	* tests/check/gst-plugins-good.supp:
	Add a few libjpeg suppressions and initialize a variable to
	make smokeenc valgrind clean. Fixes bug #515701.

2008-02-11  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/avi/gstavidemux.c:
	Revert patch which sends timestamps only on keyframes, as it
	breaks playback with current gst-ffmpeg.

	Fixes: #515562

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/multifile/gstmultifilesrc.c: (gst_multi_file_src_create):
	* tests/check/elements/multifile.c: (GST_START_TEST):
	Close some memory leaks spotted by the unit test. Fixes bug #515697.

2008-02-11  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gconf/gconf.c: (gst_gconf_render_bin_with_default):
	Use and unset the GError when pipeline creation fails instead of
	simply leaking it. Fixes bug #515704.

2008-02-10  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/audiofx/audioamplify.c:
	* gst/audiofx/audiochebband.c:
	* gst/audiofx/audiocheblimit.c:
	* gst/audiofx/audiodynamic.c:
	* gst/audiofx/audioinvert.c:
	* gst/audiofx/audiopanorama.c:
	* gst/audiofx/audiowsincband.c:
	* gst/audiofx/audiowsinclimit.c:
	Fix long description of audiofx elements. Fixes bug #515457.

2008-02-09  Jan Schmidt  <jan.schmidt@sun.com>

	* docs/plugins/Makefile.am:
	* gst/spectrum/gstspectrum.c:
	* tests/examples/spectrum/.cvsignore:
	* tests/examples/spectrum/Makefile.am:
	* tests/examples/spectrum/spectrum-example.c:
